# ros2_voice_control

./: README.md  corpus.txt  package.xml  ros_voice_control.py  setup.cfg  setup.py  vc_cmd.dic  vc_cmd.kwlist  voice_cmd.dic
resource/0059/: 0059.dic  0059.kwlist  0059.log_pronounce  0059.sent  0059.vocab  TAR0059.tgz
resource/vc_cmd/: corpus.txt  vc_cmd.dic  vc_cmd.gram  vc_cmd.kwlist  vc_cmd.lm
ros2_voice_control/: audio_stream.py  decoder.py  voice_decoder.py  voice_detector.py  voice_reporter.py  voice_translator.py
ros2_voice_control/resource/vc_cmd/: corpus.txt  vc_cmd.gram
ros2_voice_control/ros2_voice_control/: voice_decoder.py  voice_translator.py
