<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_voice_control</name>
  <version>0.4.2</version>
  <description>Ros2 Voice Controller</description>
  <maintainer email="zachhillman@gmail.com">Zachary Hillman</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>argparse</exec_depend>
  <exec_depend>pyaudio</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
